added support for EasyProbe

--- a/3040T_Mesa7i92TH.ini
+++ b/3040T_Mesa7i92TH.ini
@@ -46,6 +46,12 @@ CYCLE_TIME = 0.010
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G21 G40 G90 G94 G97 G64 P0.025
+SUBROUTINE_PATH = macros
+ON_ABORT_COMMAND = O <on_abort> call
+FEATURES = 12
+RETAIN_G43 = 0
+INI_VARS = 1
+HAL_PIN_VARS = 1
 
 [EMCMOT]
 EMCMOT = motmod
@@ -60,13 +66,10 @@ CARD0=hm2_7i92.0
 HALUI = halui
 HALFILE = 3040T_Mesa7i92TH.hal
 HALFILE = custom.hal
+HALFILE = Probe_preload.hal
+TWOPASS = on
 POSTGUI_HALFILE = custom_postgui.hal
 SHUTDOWN = shutdown.hal
-
-[HALUI]
-MDI_COMMAND = M100
-MDI_COMMAND = M101
-MDI_COMMAND = G28 X0 Y0 Z0
 
 [KINS]
 JOINTS = 3
@@ -94,7 +97,7 @@ MAX_LIMIT = 270
 
 [JOINT_0]
 TYPE = LINEAR
-HOME = 0.0
+#HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 33
@@ -145,7 +148,7 @@ MAX_LIMIT = 375
 
 [JOINT_1]
 TYPE = LINEAR
-HOME = 0.0
+#HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 33
@@ -195,7 +198,7 @@ MAX_LIMIT = 0.0
 
 [JOINT_2]
 TYPE = LINEAR
-HOME = 0.0
+#HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 12.5
@@ -231,7 +234,7 @@ HOME_LATCH_VEL = -2
 HOME_FINAL_VEL = -2
 HOME_OFFSET = 1.5
 HOME_SEQUENCE = 3
-HOME = 2
+HOME = -2
 HOME_IGNORE_LIMITS = YES
 #******************************************
 
@@ -248,4 +251,82 @@ MAX_OUTPUT = 11000
 OUTPUT_SCALE = 11000
 OUTPUT_MIN_LIMIT = 0
 OUTPUT_MAX_LIMIT = 11000
+
+
+
+
+[PROBE]
+# Define up to three tool numbers of different probes in your tool table. Set the unused numbers to zero
+TOOL_NUMBER_1 = 99
+TOOL_NUMBER_2 = 0
+TOOL_NUMBER_3 = 0
+
+# Maximum safety travel of your probe in X/Y direction. Value is given by the manufacturer. If in doubt, set it to ~3 mm.
+MAX_XY_DISTANCE = 3
+
+# Distance the probe will move back after fast probe. Recommended values between 0.5 and 2 mm.
+XY_CLEARANCE = 2
+
+# Maximum safety travel of your probe in z direction. Value is given by the manufacturer. If in doubt, set it to ~2 mm.
+MAX_Z_DISTANCE = 2
+
+# Distance the probe will move back after fast probe. Recommended values between 0.5 and 2 mm.
+Z_CLEARANCE = 2
+
+# Fast probe velocity. Recommended values between 50 and 500 mm per min.
+# Comment: All defined velocity values will be checked. Considered values are: MAX_ACCELERATION (x,y and z), DEBOUNCE_TIME and MAX_XY/Z_DISTANCE. 
+VEL_FAST = 100
+
+# Slow probe velocity. This value is important for the overall accuracy. Recommended values between 10 and 50 mm per min.
+VEL_SLOW = 50
+
+# Fast forward velocity in between pocket probe movements without actual probing.
+VEL_FF = 500
+
+# Additional probetrips will lead to a better calibration. Values between 0 and 3 are recommended.
+ADD_PROBETRIPS = 3
+
+# Time delay in ms for debouncing probe switch. Try to keep the value as low as possible. Recommended values between 2 and 20 ms.
+DEBOUNCE_TIME = 10
+
+# Configure the switch of your probe tool. 0 = NO (normally open), 1 = NC (normally closed)
+# Note: The probe signal LED must turn from green to red when you touch the probe tip
+PROBE_SWITCH = 1
+
+[HALUI]
+MDI_COMMAND = G54
+MDI_COMMAND = G55
+MDI_COMMAND = G56
+MDI_COMMAND = G57
+MDI_COMMAND = G58
+MDI_COMMAND = G59
+MDI_COMMAND = G59.1
+MDI_COMMAND = G59.2
+MDI_COMMAND = G59.3
+
+MDI_COMMAND = O <probe_toolchange>  CALL [1]
+MDI_COMMAND = O <probe_toolchange>  CALL [2]
+MDI_COMMAND = O <probe_toolchange>  CALL [3]
+
+MDI_COMMAND = O <probe_x_plus>      CALL
+MDI_COMMAND = O <probe_x_minus>     CALL
+MDI_COMMAND = O <probe_y_plus>      CALL
+MDI_COMMAND = O <probe_y_minus>     CALL
+MDI_COMMAND = O <probe_z_minus>     CALL
+MDI_COMMAND = O <probe_pocket>      CALL
+MDI_COMMAND = O <probe_operations>  CALL [1]
+MDI_COMMAND = O <probe_operations>  CALL [2]
+MDI_COMMAND = O <probe_operations>  CALL [3]
+
+MDI_COMMAND = O <probe_manual_set>  CALL [0]
+MDI_COMMAND = O <probe_manual_set>  CALL [1]
+MDI_COMMAND = O <probe_manual_set>  CALL [2]
+MDI_COMMAND = O <probe_manual_set>  CALL [3]
+MDI_COMMAND = O <probe_escape>      CALL
+
+MDI_COMMAND = O <probe_calibration> CALL
+
+MDI_COMMAND = M100
+MDI_COMMAND = M101
+MDI_COMMAND = G28 X0 Y0 Z0
 
